--- a/src/main/resources/assets/mas/lang/en_us.lang
+++ b/src/main/resources/assets/mas/lang/en_us.lang
@@ -3,3 +3,4 @@ itemGroup.mas=Machines And Stuff
 tile.generator_coal.name=Coal Generator
 tile.generator_trash.name=Trash Generator
 tile.crank.name=Crank
+tile.stone_reinforced.name=Reinforced Stone
