Added the Wrench
Thanks @Elucent for the texture!

--- a/src/main/resources/assets/mas/lang/en_us.lang
+++ b/src/main/resources/assets/mas/lang/en_us.lang
@@ -8,3 +8,4 @@ tile.crank.name=Crank
 tile.stone_reinforced.name=Reinforced Stone
 tile.accumulator_stone_reinforced.name=Reinforced Stone Accumulator
 tile.accumulator_iron.name=Iron Accumulator
+item.wrench.name=Wrench
